[package]
name = "rustsat"
version = "0.1.0"
authors = ["James Bornholt <bornholt@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
env_logger = "~0.8.3"
log = "~0.4.14"

[dev-dependencies]
rand = "0.7.2"
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
test-env-log = "~0.2.5"